--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,5 +1,5 @@
 @article{example2,
-  title = {An example journal article},
+  title = {its a test},
   author={Bighetti, Nelson and Ford, Robert},
   journal = {Journal of Source Themes},
   year    = 2015,
